Added RunAppModelRun, with functionality for DerivedText within Widgets

--- a/ipyrun/_ipyeditjson.ipynb
+++ b/ipyrun/_ipyeditjson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,6 +149,7 @@
     "                'FloatText':widgets.FloatText,\n",
     "                'FloatSlider':widgets.FloatSlider,\n",
     "                'Dropdown':widgets.Dropdown,\n",
+    "                'DerivedText':widgets.HTML,\n",
     "                'DatePicker':widgets.DatePicker,\n",
     "                'SelectMultiple':widgets.SelectMultiple,\n",
     "                'Checkbox':widgets.Checkbox,\n",
@@ -192,7 +193,6 @@
     "    def _update_change(self, change):\n",
     "        value = None\n",
     "        if(self.widget_name == \"DatePicker\"):\n",
-    "            print(self.widget_only.value)\n",
     "            value = self.widget_only.value.strftime('%d/%m/%Y')\n",
     "        else:\n",
     "            value = self.widget_only.value\n",
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,6 @@
     "        Images:\n",
     "            %mf_root%\\ipyrun\\docs\\images\\eg_ui.PNG\n",
     "        \"\"\"\n",
-    "        \n",
     "        self.out = widgets.Output()\n",
     "        self.li = li\n",
     "        self.form()\n",
@@ -428,13 +427,15 @@
     "        self.widgets = []\n",
     "        for l in self.li:\n",
     "            self.widgets.append(EditDict(l))\n",
+    "        self._layout()\n",
+    "    \n",
+    "    def _layout(self):\n",
     "        self.applayout = widgets.VBox([l.layout for l in self.widgets])\n",
     "        \n",
-    "        \n",
-    "    def _init_observe(self):  \n",
+    "    def _init_observe(self): \n",
     "        for l in self.widgets:\n",
-    "            l.widget_only.observe(self._update_change, 'value') \n",
-    "            \n",
+    "            l.widget_only.observe(self._update_change, \"value\") \n",
+    "    \n",
     "    def _update_change(self, change):\n",
     "        self.li = []\n",
     "        for l in self.widgets:\n",
@@ -448,12 +449,59 @@
     "            display(l.out)\n",
     "            \n",
     "    def _ipython_display_(self):\n",
-    "        self._lidi_display()  "
+    "        self._lidi_display()  \n",
+    "\n",
+    "class EditListOfDictsModelRun(EditListOfDicts):\n",
+    "    \"\"\"\n",
+    "    Modified version of EditJson, for Model Run spreadsheet\n",
+    "    Functionality for DerivedText has been added\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self, li):\n",
+    "        super().__init__(li)\n",
+    "\n",
+    "    def _update_label(self, index, l):\n",
+    "        labelVal = \"\"\n",
+    "        firstVal = True\n",
+    "        for opt in l.di['options']:\n",
+    "            try:\n",
+    "                if(index+opt < 0):\n",
+    "                    raise Exception(\"Can only get values of positive indices\")\n",
+    "\n",
+    "                value = self.widgets[index+opt].di[\"value\"]\n",
+    "\n",
+    "                if(value == \"\"):\n",
+    "                    value = \"XX\"\n",
+    "\n",
+    "                if(isinstance(value, float)):\n",
+    "                    if(value.is_integer()):\n",
+    "                        value = int(value)\n",
+    "\n",
+    "                if not firstVal:\n",
+    "                    labelVal += \"_\"\n",
+    "\n",
+    "                labelVal += str(value)\n",
+    "\n",
+    "                firstVal = False\n",
+    "            except Exception as e:\n",
+    "                pass\n",
+    "        return \"<b>{0}</b>\".format(labelVal)\n",
+    "    \n",
+    "    def _update_change(self, change):\n",
+    "        self.li = []\n",
+    "        for index, l in enumerate(self.widgets):\n",
+    "            if(l.widget_name==\"DerivedText\"):\n",
+    "                l.widget_only.value = self._update_label(index, l)\n",
+    "            self.li.append(l.di)\n",
+    "    \n",
+    "    def _layout(self):\n",
+    "        self._update_change(\"value\")\n",
+    "        super()._layout()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,8 +566,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "lines_to_end_of_cell_marker": 2
+   },
    "outputs": [],
    "source": [
     "class EditJson(EditListOfDicts, FileConfigController):\n",
@@ -534,13 +584,15 @@
     "        self.config = config\n",
     "        self.user_keys = list(config.keys())\n",
     "        self._update_config()\n",
-    "        self.li = read_json(self.fpth_inputs)\n",
     "        self.file_control_form()\n",
+    "        self.li = read_json(self.fpth_inputs)\n",
     "        self._init_file_controller()\n",
+    "        self.__build_widgets()\n",
+    "        \n",
+    "    def __build_widgets(self):\n",
     "        self.form()\n",
     "        self._init_observe()\n",
     "        \n",
-    "                        \n",
     "    def _revert(self, sender):\n",
     "        \"\"\"revert to last save of working inputs file\"\"\"\n",
     "        fpth = self.fpth_inputs\n",
@@ -622,12 +674,21 @@
     "            \n",
     "    def _ipython_display_(self):\n",
     "        self.display()  \n",
-    "        #self._lidi_display()  "
+    "        #self._lidi_display()  \n",
+    "\n",
+    "class EditJsonModelRun(EditListOfDictsModelRun, EditJson):\n",
+    "    \"\"\"\n",
+    "    Modified version of EditJson, for Model Run spreadsheet\n",
+    "    Functionality for DerivedText has been added\n",
+    "    \"\"\"\n",
+    "    def __build_widgets(self):\n",
+    "        EditListOfDictsModelRun.form()\n",
+    "        EditListOfDictsModelRun._init_observe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -659,7 +720,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4187d9267d2d4d3e935c3aa4520241c3",
+       "model_id": "65139f9292cd484daa913e5f18ecfa82",
        "version_major": 2,
        "version_minor": 0
       },
@@ -673,7 +734,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bd2a280b10c2425c9bc407667a16f645",
+       "model_id": "de5ce19f1cdc455382de48dca01212e6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -687,7 +748,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6794c8cc3a946638827ea0a4df47778",
+       "model_id": "998bbcb8fe89456ba180829dfcfd49c4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -701,7 +762,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "487d190045f64c968f15184a5d5e85d7",
+       "model_id": "a7148f5f9ef94dfea49b8f6bcca26fd2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -715,7 +776,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c27279512cb6431ba53a101570cc6e8b",
+       "model_id": "d78dc603db8f4c3ba39f79da9168aee8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -729,7 +790,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b5b11ea1c23645d0b7959860c08bce74",
+       "model_id": "8d6faceeaff54d62960bc34d9b070518",
        "version_major": 2,
        "version_minor": 0
       },
@@ -743,7 +804,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d8af19f545554896b0637368da5a96ee",
+       "model_id": "27125673cf2042e28b0feb791fdcd7d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -757,7 +818,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d599264f0e5497fb2b7e37502c9a69f",
+       "model_id": "25bdfbd15da64ea1ab693581afc337be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -771,7 +832,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c279a04e292f4c00afce06c628675f00",
+       "model_id": "740b4a280f19442abf1064d4c3550fb8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -831,7 +892,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f7d9dea9a7ad4a1793144cec5195fa91",
+       "model_id": "42a509d7d8ff4655a0007672a807d387",
        "version_major": 2,
        "version_minor": 0
       },
@@ -845,7 +906,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ee3821702f3c46dfa3b993c4635b0bc8",
+       "model_id": "aacfe8a1a77d4c6c88de8c88670a5236",
        "version_major": 2,
        "version_minor": 0
       },
@@ -859,7 +920,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "47f543534a834b96ab721cbc9433ba83",
+       "model_id": "7f8a38cd7dbb4226ad5220d5bf897a9c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -873,7 +934,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9688e98d5ebe48d19165d686234c4c19",
+       "model_id": "a5615d011bd644948835c67de13545c9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -887,7 +948,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "122d76e7601b4302b58061039e2027cd",
+       "model_id": "51f25e5ed7314426bc2773329e59a185",
        "version_major": 2,
        "version_minor": 0
       },
@@ -901,7 +962,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6619e78b78747e2949da6b1ecb2ca50",
+       "model_id": "97aa7375fa964b6c80e0e325705ca947",
        "version_major": 2,
        "version_minor": 0
       },
@@ -915,7 +976,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9690626a96a4f1284fce4acaff78a7e",
+       "model_id": "1f863840ffce4ffaac2f52b81c6c8642",
        "version_major": 2,
        "version_minor": 0
       },
@@ -929,7 +990,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40d3b76923e947adaac59dd8148d86ee",
+       "model_id": "3d12ea5e88e64207b030b30ce467a978",
        "version_major": 2,
        "version_minor": 0
       },
@@ -943,7 +1004,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f39a289c6e34bf786f9c7313166c556",
+       "model_id": "7a4bef9d2dd44c54802bba3c8f1edc4c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -957,7 +1018,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba35f1d2e2da424793447b719c16fc62",
+       "model_id": "a298ff42cdf7456eb785bbca86db4d34",
        "version_major": 2,
        "version_minor": 0
       },
@@ -971,7 +1032,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e46b4a6250042128a18ad83ba000193",
+       "model_id": "be8885d9060a4cac94b0154c43d90cba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1031,7 +1092,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d35d480ed8646c5927b292bb9a36c5e",
+       "model_id": "c805e13391484cf3afe879bcfaeb0275",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1045,7 +1106,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6150569dd904805828125f14d1d1c50",
+       "model_id": "ca0f6d33c44945ba9cde06bb578b2f0b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1059,7 +1120,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2c33425a3eca4b59b64a96e8db1a5951",
+       "model_id": "d24dbf30bd64408d8fd53acb07de7fe5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1119,7 +1180,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0eeee6b04c64a3f955fdfd6cde2e40a",
+       "model_id": "d20512f10d934168bc7df3a4c8912965",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1133,7 +1194,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a92c317ffe314c51a0020e251f3d481a",
+       "model_id": "ac8761facd914fdb9b67a09b1c6d6f24",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1147,7 +1208,151 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a7cfad6688d4413a7d8e81450f71cfd",
+       "model_id": "22310d65119141e48527d0fd29a456aa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "---"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "### Example0"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "Edit list of dicts"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4977ed56092846bfb99e44d9852ca27a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(HBox(children=(HTML(value='<p>Date Picker</p>'), HBox(children=(DatePicker(value…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e59440c2045d4d2fa753e5cf02ce5ca3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ad1636ebb17c48f9aa1b02e1ea3e7118",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "249f1d68344c4782bd1625dbca3a0a20",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5a97a02ca15f45fcbf1cc302a5f78f0e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f680a0fb900d42009fe99cdfc4c29d14",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "68ceeb1f01b3400d932d8d25b51a2300",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1234,14 +1439,74 @@
     "        'fpth_script':os.path.join(os.environ['mf_root'],r'MF_Toolbox\\dev\\mf_scripts\\gbxml.py'),\n",
     "        'fdir':'.',\n",
     "        }\n",
-    "    editnestedjson = EditJson(nestedconfig)\n",
+    "    editnestedjson = EditJsonModelRun(nestedconfig)\n",
     "    # display\n",
     "    display(Markdown('### Example3'))\n",
     "    display(Markdown('''EDIT NESTED JSON FILE with custom config and file management'''))\n",
     "    display(editnestedjson)\n",
     "    display(Markdown('---'))  \n",
+    "    display(Markdown('')) \n",
+    "\n",
+    "        \n",
+    "    # FORM ONLY EXAMPLE\n",
+    "    NBFDIR = os.path.dirname(os.path.realpath('__file__'))\n",
+    "    fpth = os.path.join(NBFDIR,r'appdata\\inputs\\test-derived-val.json')\n",
+    "    li = read_json(fpth)\n",
+    "    g = EditListOfDictsModelRun(li)\n",
+    "    display(Markdown('### Example0'))\n",
+    "    display(Markdown('''Edit list of dicts'''))\n",
+    "    display(g)\n",
+    "    display(Markdown('---'))  \n",
     "    display(Markdown('')) "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
