--- a/ipyrun/ipyrun.ipynb
+++ b/ipyrun/ipyrun.ipynb
@@ -31,12 +31,12 @@
     "try:\n",
     "    from ipyrun._runconfig import RunConfig\n",
     "    from ipyrun._ipyeditcsv import EditCsv\n",
-    "    from ipyrun._ipyeditjson import EditJson\n",
+    "    from ipyrun._ipyeditjson import EditJson, EditJsonModelRun\n",
     "    from ipyrun._ipydisplayfile import DisplayFile, DisplayFiles\n",
     "except:\n",
     "    from _runconfig import RunConfig\n",
     "    from _ipyeditcsv import EditCsv\n",
-    "    from _ipyeditjson import EditJson\n",
+    "    from _ipyeditjson import EditJson, EditJsonModelRun\n",
     "    from _ipydisplayfile import DisplayFile, DisplayFiles\n",
     "\n",
     "def get_mfuser_initials():\n",
@@ -162,7 +162,8 @@
     "                }    \n",
     "\n",
     "            r = RunApp(config) \n",
-    "            from ipyrun._ipyeditjson import EditListOfDicts\n",
+    "            from ipyrun._ipyeditjson import \n",
+    "            \n",
     "            ui = EditListOfDicts(li)\n",
     "            ui\n",
     "            ```\n",
@@ -309,7 +310,17 @@
     "        \n",
     "    def _ipython_display_(self):\n",
     "        self.display()    \n",
-    "        \n",
+    "\n",
+    "class RunAppModelRun(RunApp):\n",
+    "    \"\"\"\n",
+    "    Modified version of EditJson, for Model Run spreadsheet\n",
+    "    Functionality for DerivedText has been added\n",
+    "    \"\"\"\n",
+    "    def _edit_inputs(self, sender):\n",
+    "        with self.out:\n",
+    "            clear_output()\n",
+    "            display(EditJsonModelRun(self.config))\n",
+    "    \n",
     "# IT WOULD BE GOOD TO ADD A PROGRESS BAR\n",
     "# i think this would require us to time how long it takes for a script to execute and use that \n",
     "# as a first estimate. we could also then keep an ongoing record of time-taken to run a script within\n",
@@ -490,7 +501,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "91a1f57ff7ad427684926233ced8f7bd",
+       "model_id": "1a2bb0d99abb46b8a2820dd3be8018f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -504,7 +515,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d49b686dbe7649fd884a0b8cdcdd75f5",
+       "model_id": "7241547db8e5426aa1ddd687c8c0c49a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -573,7 +584,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b608174ddf9f4d70b2bdc058ac868085",
+       "model_id": "d8af695e1a3447b8bf38010be17a491e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -587,7 +598,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b385f2c9ca240759bdb282c3c973359",
+       "model_id": "4d235c333ec2421f8aafeb79afac8abd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -677,7 +688,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a784968645b741a288cd681e51750283",
+       "model_id": "24ef167a4c1b4ba2bcdab79ddc1912bf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -691,7 +702,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7d4626a70b054f0a8b95b131ca9234fe",
+       "model_id": "f640a3eb99d84ccc88eccff9fba955a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -705,7 +716,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "067a22602ec040629fc4ecf39c0b6b37",
+       "model_id": "7a61a072e1134686a83b9fa0b5c361dd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -719,7 +730,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30d377fb859b404abf6371245e3756be",
+       "model_id": "572df43a7a3d45668c9327657894528c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -733,7 +744,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f38f68f3cc5244eab8138d3af7583b10",
+       "model_id": "84bba196cfb7491bb78878e0013b3e0b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -747,7 +758,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6fd84ba0d8c844f08941439d7d53a799",
+       "model_id": "3449e862c61c43349efd54d65e362903",
        "version_major": 2,
        "version_minor": 0
       },
@@ -761,7 +772,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e39b3b26bb0490c96dcc7f29cd0fc53",
+       "model_id": "0b2a3897159145e4b56525b316c642f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -775,7 +786,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "820fe9d97c2b44a1b6c6f5a7894b874c",
+       "model_id": "0363c8d2de3b49a6953e16cfeead27a5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -807,6 +818,34 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "63d5eebeba45454f87496a432c4051da",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Checkbox(value=False, indent=False, layout=Layout(height='30px', max_width='30px', padding='3px…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c2e7bfe8a7334ab39b3f7d439406b532",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -831,7 +870,7 @@
     "            }\n",
     "        }    \n",
     "\n",
-    "    rjson = RunApp(config)  \n",
+    "    rjson = RunAppModelRun(config)  \n",
     "    display(Markdown('### Example1'))\n",
     "    display(Markdown('''default RunApp.'''))\n",
     "    display(rjson)\n",
@@ -934,44 +973,7 @@
     "    '''))\n",
     "    display(runapps)\n",
     "    display(Markdown('---'))  \n",
-    "    display(Markdown('')) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "428cef80ab1340d3ba95d79f95e26a3d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Checkbox(value=False, indent=False, layout=Layout(height='30px', max_width='30px', padding='3px…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d3f76334a53466988f94e7b9af90114",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "    display(Markdown('')) \n",
     "fpth_script = os.path.join(os.environ['mf_root'],r'MF_Toolbox\\dev\\mf_scripts\\gbxml.py')\n",
     "config={\n",
     "    'fpth_script':os.path.realpath(fpth_script),\n",
@@ -984,7 +986,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": []
   }
