--- a/ipyrun/_ipyeditjson.ipynb
+++ b/ipyrun/_ipyeditjson.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
     "                'FloatText':widgets.FloatText,\n",
     "                'FloatSlider':widgets.FloatSlider,\n",
     "                'Dropdown':widgets.Dropdown,\n",
-    "                'DerivedText':widgets.HTML,\n",
+    "                'DerivedText':widgets.Label,\n",
     "                'DatePicker':widgets.DatePicker,\n",
     "                'SelectMultiple':widgets.SelectMultiple,\n",
     "                'Checkbox':widgets.Checkbox,\n",
@@ -196,6 +196,7 @@
     "            value = self.widget_only.value.strftime('%d/%m/%Y')\n",
     "        else:\n",
     "            value = self.widget_only.value\n",
+    "\n",
     "        self.di['value'] = value\n",
     "\n",
     "    def _build_widget(self):\n",
@@ -207,6 +208,9 @@
     "        elif self.widget_name == \"DatePicker\":\n",
     "            value = datetime.strptime(self.kwargs['value'], '%d/%m/%Y')\n",
     "            self.widget_only = self.widget_lkup[self.widget_name](value=value)\n",
+    "        elif self.widget_name == \"DerivedText\":   \n",
+    "            self.widget_only = self.widget_lkup[self.widget_name](**self.kwargs)\n",
+    "            self.widget_only.layout=widgets.Layout(border='solid 1px #BBBBBB', padding='0px 10px 0px 10px')\n",
     "        else:\n",
     "            self.widget_only = self.widget_lkup[self.widget_name](**self.kwargs)\n",
     "        self.widget_simple = widgets.HBox([self.widget_only,_markdown(self.di['label'])],layout=self.MF_FORM_ITEM_LAYOUT)\n",
@@ -367,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +489,7 @@
     "                firstVal = False\n",
     "            except Exception as e:\n",
     "                pass\n",
-    "        return \"<b>{0}</b>\".format(labelVal)\n",
+    "        return \"{0}\".format(labelVal)\n",
     "    \n",
     "    def _update_change(self, change):\n",
     "        self.li = []\n",
@@ -501,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
     "lines_to_end_of_cell_marker": 2
    },
@@ -681,6 +685,10 @@
     "    Modified version of EditJson, for Model Run spreadsheet\n",
     "    Functionality for DerivedText has been added\n",
     "    \"\"\"\n",
+    "    \n",
+    "    def __init__(self, config):\n",
+    "        EditJson.__init__(self, config)\n",
+    "        \n",
     "    def __build_widgets(self):\n",
     "        EditListOfDictsModelRun.form()\n",
     "        EditListOfDictsModelRun._init_observe()"
@@ -688,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -720,7 +728,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "65139f9292cd484daa913e5f18ecfa82",
+       "model_id": "08e76f95c4b64041bc2a975dabd71623",
        "version_major": 2,
        "version_minor": 0
       },
@@ -734,7 +742,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "de5ce19f1cdc455382de48dca01212e6",
+       "model_id": "83dfa69371564fd1bef96f7fd68fed4a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -748,7 +756,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "998bbcb8fe89456ba180829dfcfd49c4",
+       "model_id": "b6eadc4530de4c0195e977f892906f63",
        "version_major": 2,
        "version_minor": 0
       },
@@ -762,7 +770,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7148f5f9ef94dfea49b8f6bcca26fd2",
+       "model_id": "72307e642b204de38cc6760c675e1274",
        "version_major": 2,
        "version_minor": 0
       },
@@ -776,7 +784,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d78dc603db8f4c3ba39f79da9168aee8",
+       "model_id": "02fe9a4012d746a7bb0246ba4afeb48d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -790,7 +798,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d6faceeaff54d62960bc34d9b070518",
+       "model_id": "e33d7d32b84a463ab562aa8b411231d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -804,7 +812,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "27125673cf2042e28b0feb791fdcd7d1",
+       "model_id": "67117dcd8aa84e07b572d137a6a2e4f5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -818,7 +826,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "25bdfbd15da64ea1ab693581afc337be",
+       "model_id": "d5400effa6894cf7be2571ca676a52d7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -832,7 +840,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "740b4a280f19442abf1064d4c3550fb8",
+       "model_id": "39627b565f2c43bba6f0ceafdb2f9582",
        "version_major": 2,
        "version_minor": 0
       },
@@ -892,7 +900,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42a509d7d8ff4655a0007672a807d387",
+       "model_id": "ea39209537784afcabcd6fe66f321052",
        "version_major": 2,
        "version_minor": 0
       },
@@ -906,7 +914,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aacfe8a1a77d4c6c88de8c88670a5236",
+       "model_id": "e7c4f53eb0f8419c9c3a4dcbc381de30",
        "version_major": 2,
        "version_minor": 0
       },
@@ -920,7 +928,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7f8a38cd7dbb4226ad5220d5bf897a9c",
+       "model_id": "30f1b010e12446c69cbb497cd81a54e4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -934,7 +942,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5615d011bd644948835c67de13545c9",
+       "model_id": "7a3df7bdc2c9478583ea45ae791d9315",
        "version_major": 2,
        "version_minor": 0
       },
@@ -948,7 +956,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "51f25e5ed7314426bc2773329e59a185",
+       "model_id": "6bece09ba3c94f438b0f76dac4f69122",
        "version_major": 2,
        "version_minor": 0
       },
@@ -962,7 +970,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "97aa7375fa964b6c80e0e325705ca947",
+       "model_id": "e94115245ebe4384b5a0999960b7718b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -976,7 +984,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f863840ffce4ffaac2f52b81c6c8642",
+       "model_id": "10d91b2531a7410e9b40d2b5cff1d136",
        "version_major": 2,
        "version_minor": 0
       },
@@ -990,7 +998,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d12ea5e88e64207b030b30ce467a978",
+       "model_id": "6469909b14844b64aa3acdacd9e49030",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1004,7 +1012,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7a4bef9d2dd44c54802bba3c8f1edc4c",
+       "model_id": "f1491ef053124ec8b113ff0bafac46ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1018,7 +1026,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a298ff42cdf7456eb785bbca86db4d34",
+       "model_id": "65429e86da0a4807a333166c62f9ecde",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1032,7 +1040,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be8885d9060a4cac94b0154c43d90cba",
+       "model_id": "356614a4b5074574871c32ff3119ce44",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1092,7 +1100,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c805e13391484cf3afe879bcfaeb0275",
+       "model_id": "874c95072f4a4b90a397a0cb3831eb96",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1106,7 +1114,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca0f6d33c44945ba9cde06bb578b2f0b",
+       "model_id": "ce21414ebd6947b6b73d364d0693de32",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1120,7 +1128,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d24dbf30bd64408d8fd53acb07de7fe5",
+       "model_id": "d108f80586c94a28977b2e5db99a7982",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1180,7 +1188,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d20512f10d934168bc7df3a4c8912965",
+       "model_id": "69c81c21fd7640edb7531836d1166d2c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1194,7 +1202,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ac8761facd914fdb9b67a09b1c6d6f24",
+       "model_id": "4cb7f48a2ac94dbba5ce5b27828f587f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1208,7 +1216,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22310d65119141e48527d0fd29a456aa",
+       "model_id": "03b240578da046c18b28dc6c3b574782",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1244,7 +1252,7 @@
     {
      "data": {
       "text/markdown": [
-       "### Example0"
+       "### Example4"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1256,7 +1264,7 @@
     {
      "data": {
       "text/markdown": [
-       "Edit list of dicts"
+       "EDIT JSON with DatePicker and DerivedText widgetss"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1268,7 +1276,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4977ed56092846bfb99e44d9852ca27a",
+       "model_id": "75f39093b44f41f392e971a95a3cc4c9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1282,7 +1290,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e59440c2045d4d2fa753e5cf02ce5ca3",
+       "model_id": "4fd2dfb06d5e489ba98d7272c76517a3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1296,7 +1304,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad1636ebb17c48f9aa1b02e1ea3e7118",
+       "model_id": "e926eb3f577e4786ae09b73721390b83",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1310,7 +1318,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "249f1d68344c4782bd1625dbca3a0a20",
+       "model_id": "5e296e9f759a43548fada2901f13690f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1324,7 +1332,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a97a02ca15f45fcbf1cc302a5f78f0e",
+       "model_id": "633f4030b5604b65b0f9698fb9e6a09e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1338,7 +1346,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f680a0fb900d42009fe99cdfc4c29d14",
+       "model_id": "55f6f5fc5db949c2aa0f30b5678126e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1352,7 +1360,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "68ceeb1f01b3400d932d8d25b51a2300",
+       "model_id": "cb89e20434a94605a354bcc3779401b3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1448,13 +1456,14 @@
     "    display(Markdown('')) \n",
     "\n",
     "        \n",
-    "    # FORM ONLY EXAMPLE\n",
+    "    # Example4\n",
+    "    # EDIT JSON with DatePicker and DerivedText widgets\n",
     "    NBFDIR = os.path.dirname(os.path.realpath('__file__'))\n",
     "    fpth = os.path.join(NBFDIR,r'appdata\\inputs\\test-derived-val.json')\n",
     "    li = read_json(fpth)\n",
     "    g = EditListOfDictsModelRun(li)\n",
-    "    display(Markdown('### Example0'))\n",
-    "    display(Markdown('''Edit list of dicts'''))\n",
+    "    display(Markdown('### Example4'))\n",
+    "    display(Markdown('''EDIT JSON with DatePicker and DerivedText widgetss'''))\n",
     "    display(g)\n",
     "    display(Markdown('---'))  \n",
     "    display(Markdown('')) "
@@ -1505,6 +1514,48 @@
    "metadata": {
     "lines_to_next_cell": 2
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
